--- a/static/styles.css
+++ b/static/styles.css
@@ -23,7 +23,6 @@ body {
     padding: 12px;
     background-image: url("logon.jpg");
     display: flex;
-    border-radius: 14px
 }
 
 header {
@@ -76,6 +75,7 @@ footer {
     width: 100%;
     margin-top: 20px;
     border-radius: 14px;
+    box-sizing: border-box;
 }
 
 footer p {
@@ -84,9 +84,9 @@ footer p {
 
 .social-links {
     display: flex;
-    justify-content: center;
     gap: 10px;
     margin-top: 10px;
+    justify-content: center;
 }
 
 .social-icon img {
@@ -103,7 +103,7 @@ footer a:hover {
 }
 
 /* Mobile Responsive Styles */
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
     .container {
         padding: 10px;
     }
@@ -165,4 +165,9 @@ footer a:hover {
     input[type="file"] {
         max-width: 250px;
     }
+    footer {
+        text-align: center;
+        padding: 15px;
+    }
+
 }
